--- a/style.css
+++ b/style.css
@@ -7,5 +7,9 @@
   margin-top: -12.5%;
   margin-left: -12.5%;
   border-radius: 2px;
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
   background: #43389f;
+  background: linear-gradient(to top right, #43389f 0%, #4ec6ca 100%);
+  font-family: "Courier New", "Courier", sans-serif;
+  color: #fff;
 }
