positioning,transform,z-index

--- a/style.css
+++ b/style.css
@@ -2,14 +2,91 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 25%;
-  height: 25%;
-  margin-top: -12.5%;
-  margin-left: -12.5%;
+  width: 400px;
+  height: 400px;
+  margin-top: -200px;
+  margin-left: -200px;
   border-radius: 2px;
   box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
   background: #43389f;
   background: linear-gradient(to top right, #43389f 0%, #4ec6ca 100%);
   font-family: "Courier New", "Courier", sans-serif;
   color: #fff;
+}
+
+.center {
+  position: absolute;
+  top: 50.8%;
+  left: 50.5%;
+  transform: translate(-50%, -50%);
+}
+
+.number {
+  position: relative;
+  height: 100px;
+  width: 200px;
+}
+
+.number .one-one {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: -16px;
+  height: 50px;
+  width: 20px;
+  background: #fff;
+  border-radius: 3px;
+  transform: rotate(50deg);
+  box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
+}
+
+.number .one-two {
+  position: absolute;
+  z-index: 1;
+  top: 2px;
+  left: 5px;
+  height: 100px;
+  width: 25px;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
+}
+
+.number .zero-one,
+.zero-two {
+  position: absolute;
+  top: 2px;
+  left: 25px;
+  box-sizing: border-box;
+  height: 100px;
+  width: 100px;
+  border: 24px solid rgb(195, 30, 30);
+  border-radius: 50%;
+  box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
+}
+
+.zero-two {
+  left: 110px;
+  z-index: -1;
+}
+
+.big {
+  display: block;
+  position: relative;
+  margin-top: 6px;
+  font-size: 82px;
+  line-height: 70px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.small {
+  position: relative;
+  z-index: 20;
+  display: block;
+  font-size: 23px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.04em;
 }
