--- a/2/style.css
+++ b/2/style.css
@@ -45,3 +45,14 @@ $cubic-bezier-out: cubic-bezier(1,0.70,1,0.30); */
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
   transition: background-color 0.2s ease-in-out;
 }
+
+.menu-icon:hover .line-1,
+.menu-icon:hover .line-2,
+.menu-icon:hover .line-3 {
+  background-color: #fff;
+}
+.menu-icon.active .line-1,
+.menu-icon.active .line-2,
+.menu-icon.active .line-3 {
+  background-color: #fff;
+}
